# the-slab

./: CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_PROMPTS.md  Cargo.toml  PLAN_CLI_AUTOCOMPLETE.md  PLAN_VISUAL_AESTHETIC.md  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
.slab/: config.toml
.slab/rules/: c.md  citizen.md  rust.md  translation_plan.md
.slab/templates/: analyze.yaml  c-improve.yaml  c-quality.yaml  c-rationale.yaml  c-to-rust.yaml  review.yaml
completions/: _slab  slab.bash  slab.fish
docs/superpowers/plans/: 2026-04-28-skills-integration.md
docs/superpowers/specs/: 2026-04-28-skills-integration-design.md
src/: cli.rs  completion.rs  config.rs  context.rs  error.rs  file_ops.rs  highlight.rs  main.rs  ollama.rs  openai.rs  repl.rs  rules.rs  session.rs  templates.rs  testing.rs  theme.rs  ui.rs
