[package]
name = "slab"
version = "0.4.0"
edition = "2021"
description = "An offline CLI tool for local LLMs via Ollama"
license = "MIT"

[[bin]]
name = "slab"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# HTTP client - rustls only, NO openssl
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Terminal UI
crossterm = "0.28"
console = "0.15"
indicatif = "0.17"

# Async stream utilities
tokio-stream = "0.1"

# Directories
dirs-next = "2"

# File operations (Phase 2)
similar = "2"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
walkdir = "2"

# Context & Templates (Phase 3)
handlebars = "6"
glob = "0.3"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
serde_yaml = "0.9"

# Rules & Testing (Phase 4)
regex = "1"

# Visual enhancements (Phase 5)
unicode-width = "0.1"
textwrap = "0.16"
terminal_size = "0.4"
